@@ -1,4 +1,4 @@
-$Id: History,v 1.65 2002-12-06 19:40:45 gcosmo Exp $
+$Id: History,v 1.66 2002-12-09 10:25:01 vnivanch Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+09 dec 02: V.Ivant (utils-V04-01-11)
+- Remove warnings in G4SCProcessorStand and G4UniversalFluctuation
 
 06 dec 02: G.Cosmo (utils-V04-01-10)
 - Merged changes for new G4ApplicationState in messengers.
