@@ -1,4 +1,4 @@
-$Id: History,v 1.33 2002-12-04 14:51:53 vnivanch Exp $
+$Id: History,v 1.34 2002-12-09 10:26:20 vnivanch Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+09 dec 02: V.Ivant (muons-V04-01-03)
+-fix warning in G4MuIonisationSTD
 
 04 dec 02: V.Ivant (muons-V04-01-02)
 -fix problems in delta-electrons spectrum
